@@ -1,7 +1,5 @@
 #! /usr/bin/make -f
 
-export DH_OPTIONS
-
 # set the number of build jobs
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	JOBS := -j$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
@@ -162,24 +160,12 @@ bbv2dir = $(CURDIR)/tools/build/v2
 # With --ignore-site-config, can probably drop Build-Conflicts on boost-build.
 JAM = $(bjam) $(JOBS) -d2 $(JAM_OPT) --layout=system --ignore-site-config --user-config=$(CURDIR)/user-config.jam debug-symbols=on
 
-$(bjam):
-	./bootstrap.sh --with-icu --prefix=$(CURDIR)/debian/tmp/usr \
-	  || cat bootstrap.log
+%:
+	dh $@
 
-debian/bjam.1: $(bjam)
-	help2man --name 'software build tool' --no-info ./bjam > $@
+override_dh_auto_configure: $(bjam) user-config.jam make-debhelper
 
-user-config.jam:
-	echo $(TOOLSET_CONFIG) > $@
-	echo $(MPI_CONFIG)     >> $@
-	for pyver in $(filter-out $(shell pyversions -dv),$(pyversions)); do \
-		echo "using python : $$pyver : /usr ;" >> $@; \
-	done
-
-build: build-stamp
-build-stamp: $(bjam) user-config.jam
-	dh_testdir
-
+override_dh_auto_build: debian/bjam.1
 	$(JAM) --without-python                        
 	for pyver in $(pyversions); do \
 	 	pyid=$$(echo $$pyver | tr -d .); \
@@ -196,7 +182,35 @@ build-stamp: $(bjam) user-config.jam
 	cd tools/regression/build && $(JAM)
 	cd libs/python/pyste/install && python setup.py build
 
-	touch build-stamp
+override_dh_auto_clean: clean-debhelper
+	-cd tools && $(JAM) clean
+	-$(JAM) clean
+	-cd libs/python/pyste/install && python setup.py clean
+	rm -rf libs/python/pyste/install/build
+	rm -rf tools/jam/src/bootstrap
+	rm -rf tools/jam/src/bin.*
+	rm -ff tools/jam/src/bjam
+	rm -rf tools/regression/build/bin
+	rm -rf bin.v2 dist
+	rm -rf user-config.jam
+	rm -rf debian/bjam.1
+	dh_auto_clean
+
+
+
+$(bjam):
+	./bootstrap.sh --with-icu --prefix=$(CURDIR)/debian/tmp/usr \
+	  || cat bootstrap.log
+
+debian/bjam.1: $(bjam)
+	help2man --name 'software build tool' --no-info ./bjam > $@
+
+user-config.jam:
+	echo $(TOOLSET_CONFIG) > $@
+	echo $(MPI_CONFIG)     >> $@
+	for pyver in $(filter-out $(shell pyversions -dv),$(pyversions)); do \
+		echo "using python : $$pyver : /usr ;" >> $@; \
+	done
 
 $(filtered_files): % : %.in
 	sed -e 's/@PKGVERSION@/$(PKGVERSION)/g' < $< > $@
@@ -206,42 +220,23 @@ clean-debhelper:
 	rm -rf debian/*.links
 	rm -rf debian/*.lintian-overrides
 
-clean: clean-debhelper
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp
-
-	-cd tools && $(JAM) clean
-	-$(JAM) clean
-	-cd libs/python/pyste/install && python setup.py clean
-
-	rm -rf libs/python/pyste/install/build
-	rm -rf tools/jam/src/bootstrap
-	rm -rf tools/jam/src/bin.*
-	rm -ff tools/jam/src/bjam
-	rm -rf tools/regression/build/bin
-	rm -rf bin.v2 dist
-	rm -rf user-config.jam
-	rm -rf debian/bjam.1
-
-	dh_clean build-stamp
-
-# This rule is for debugging debian/rules.
-make-debhelper: clean-debhelper
+# Make all the generated debhelper files.
+make-debhelper: clean-debhelper $(filtered_files)
 	@$(call mk_debhelper_files)
-
-install: DH_OPTIONS=-X.svn
-install: build clean-debhelper $(filtered_files) debian/bjam.1
-	dh_testdir
-	dh_testroot
-	dh_prep
-
 	@$(call cp_debhelper,libboost-dbg,libboost$(PKGVERSION)-dbg)
 	@$(call cp_debhelper,libboost-dev,libboost$(PKGVERSION)-dev)
 	@$(call cp_debhelper,libboost-doc,libboost$(PKGVERSION)-doc)
 	@$(call cp_debhelper,libboost-python-dev,libboost-python$(PKGVERSION)-dev)
 	@$(call cp_debhelper,libboost-mpi-python-dev,libboost-mpi-python$(PKGVERSION)-dev)
 
+override_dh_pysupport:
+	dh_python2
+	dh_python3
+
+override_dh_compress:
+	dh_compress -Xlibboost$(PKGVERSION)-doc/HTML
+
+override_dh_install:
 	$(JAM) --prefix=$(CURDIR)/debian/tmp/usr install --without-python                        
 	for pyver in $(pyversions); do \
 		pyid=`echo $$pyver | tr -d .`; \
@@ -258,9 +253,6 @@ install: build clean-debhelper $(filtered_files) debian/bjam.1
 	find debian/tmp/usr/include debian/tmp/usr/share/boost-build -type f | xargs chmod 644
 	find debian/tmp -name .cvsignore | xargs rm -f
 	find debian -empty -type f | xargs rm -f
-
-	# generate (some) debhelper files
-	@$(call mk_debhelper_files)
 
 	# package libboost-dbg
 
@@ -323,54 +315,7 @@ install: build clean-debhelper $(filtered_files) debian/bjam.1
 	mv $(pyste_prefix)/bin/pyste.py $(pyste_prefix)/bin/pyste
 	dh_installman -plibboost-python$(PKGVERSION)-dev debian/pyste.1
 
-
-# This single target is used to build all the packages, all at once, or
-# one at a time. So keep in mind: any options passed to commands here will
-# affect _all_ packages. Anything you want to only affect one package
-# should be put in another target, such as the install target.
-binary-common:
-	dh_testdir
-	dh_testroot
 	dh_install
-	dh_installdocs --all debian/README.Debian debian/NEWS.Debian
-	dh_installexamples
-	dh_installinfo
-	dh_installchangelogs
-	dh_lintian
+
+override_dh_strip:
 	dh_strip --dbg-package=libboost$(PKGVERSION)-dbg -X"-d-"
-	dh_link
-	dh_compress -Xlibboost$(PKGVERSION)-doc/HTML
-	dh_python2
-	dh_python3
-	dh_fixperms
-
-	@if [ "$(DH_OPTIONS)" = "-a" ]; then \
-		echo DH_OPTIONS=-plibboost$(PKGVERSION)-dbg dh_makeshlibs -V"libboost$(PKGVERSION)-dbg $(SHLIBS_VERSION)"; \
-		DH_OPTIONS=-plibboost$(PKGVERSION)-dbg dh_makeshlibs -V"libboost$(PKGVERSION)-dbg $(SHLIBS_VERSION)"; \
-		for name in $(boost_libs); do \
-			lib=libboost-$${name}$(SOVERSION); \
-			echo DH_OPTIONS=-p$${lib} dh_makeshlibs -V"$${lib} $(SHLIBS_VERSION)"; \
-			DH_OPTIONS=-p$${lib} dh_makeshlibs -V"$${lib} $(SHLIBS_VERSION)"; \
-		done; \
-	fi
-
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-# Build architecture independant packages using the common target.
-binary-indep: build install
-	$(MAKE) -f debian/rules DH_OPTIONS=-i binary-common
-
-# Build architecture dependant packages using the common target.
-binary-arch: build install
-	$(MAKE) -f debian/rules DH_OPTIONS=-a binary-common
-
-# Any other binary targets build just one binary package at a time.
-binary-%: build install
-	$(MAKE) -f debian/rules binary-common DH_OPTIONS=-p$*
-
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary-common binary install
