@@ -4,8 +4,10 @@ boost1.53 (1.53.0-1) UNRELEASED; urgency=low
     in documentation-files and example-files.
 
   * rules: Stop creating "libboost_foo-mt" compatibility symlinks.
+    Rewrite rules using "dh".  README.Debian and NEWS.Debian no longer
+    ship in all packages.
 
- -- Steve M. Robbins <smr@debian.org>  Sat, 09 Feb 2013 21:47:57 -0600
+ -- Steve M. Robbins <smr@debian.org>  Mon, 04 Mar 2013 08:15:45 -0600
 
 boost1.52 (1.52.0-1) UNRELEASED; urgency=low
 
